# TheCourseTeer

./: .env.example  .gitignore  CLAUDE.md  CONTEXT.md  GEMINI.md  LICENSE  Makefile  OLDdocker-compose.yml  README.md  add_missing_campuses.py  check_swinburne_db.py  latrobe_sample.html  list_all_campuses.py  list_new_uuids.py  list_swinburne_campuses.py  monash_sample.html  rmit_sample.html  test_sitemap_regex.py
scraper/: ai_parse.py  ai_remap.py  base_scraper.py  browser.py  check_unimelb.py  db.py  debug_unimelb.py  federation_nursing_sample.html  fetch_page.py  http_client.py  latrobe.py  latrobe_accounting_detail.json  latrobe_accounting_sample.html  latrobe_detail_sample.json  models.py  monash.py  pyproject.toml  rmit.py  robots.py  run.py  seed_site_configs.py  selector.py  snapshot_manager.py  swinburne.py  unimelb.py  universal_engine.py
scraper/tests/: conftest.py  test_latrobe_fixes.py  test_latrobe_gold_standards.py  test_migrate_federation.py  test_migrate_latrobe.py  test_migrate_monash.py  test_migrate_rmit.py  test_migrate_swinburne.py  test_migrate_unimelb.py  test_queue_db.py  test_ug_filter.py  test_universal_engine.py
scraper/tests/gold_standards/: conftest.py  helpers.py
scraper/tests/gold_standards/fixtures/: latrobe_bachelor_of_accounting.html  latrobe_bachelor_of_criminology_detail_be.json  latrobe_bachelor_of_criminology_detail_bu.json  latrobe_bachelor_of_criminology_detail_on.json  latrobe_bachelor_of_criminology_sample.html  latrobe_bachelor_of_nursing_detail_be.json  latrobe_bachelor_of_nursing_detail_bu.json  latrobe_sample.html  (+10 more)
(+171 files in other folders)
