[project]
name = "courseteer-scraper"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27",
    "beautifulsoup4>=4.12",
    "lxml>=6.1.0",
    "playwright>=1.44",
    "psycopg[binary]>=3.2",
    "psycopg-pool>=3.2",
    "anthropic>=0.28",
    "python-dotenv>=1.0",
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pypdf>=6.10.2",
]

[tool.uv]
package = false

[tool.setuptools]
py-modules = [
    "ai_parse",
    "ai_remap",
    "base_scraper",
    "browser",
    "db",
    "http_client",
    "models",
    "robots",
    "run",
    "seed_site_configs",
    "selector",
    "snapshot_manager",
    "universal_engine",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
testpaths = ["tests"]
